tests/artifacts/httproute-tls-healthy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  creationTimestamp: "2026-06-26T23:39:52Z"
  generation: 1
  name: eg
  namespace: default
  resourceVersion: "2879"
  uid: a435653a-2de9-4020-a816-f4e16013a010
spec:
  gatewayClassName: eg
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    name: https
    port: 443
    protocol: HTTPS
    hostname: gateway.example.com
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: gateway-tls
status:
  conditions:
  - lastTransitionTime: "2026-06-26T23:42:41Z"
    message: The Gateway has been scheduled by Envoy Gateway
    observedGeneration: 1
    reason: Accepted
    status: "True"
    type: Accepted
  listeners:
  - attachedRoutes: 1
    conditions:
    - lastTransitionTime: "2026-06-26T23:42:41Z"
      message: Listener references have been resolved
      observedGeneration: 1
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    name: https
    supportedKinds:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
---
apiVersion: v1
kind: Secret
metadata:
  creationTimestamp: "2026-06-26T23:39:52Z"
  name: gateway-tls
  namespace: default
  resourceVersion: "2880"
  uid: b435653a-2de9-4020-a816-f4e16013a011
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHakNDQWdLZ0F3SUJBZ0lVZkwxVW9oalNFYVN0SXNuSVVJQlFGK0NqUG80d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0VqRVFNQTRHQTFVRUF3d0hWR1Z6ZENCRFFUQWdGdzB5TmpBM01EUXlNVE16TVRKYUdBOHlNVEkyTURZeApNREl4TXpNeE1sb3dGakVVTUJJR0ExVUVBd3dMWlhoaGJYQnNaUzVqYjIwd2dnRWlNQTBHQ1NxR1NJYjNEUUVCCkFRVUFBNElCRHdBd2dnRUtBb0lCQVFES1o5K2NhUzZLQ05rZExaQ0p1djRNNnF6ME5DbHNCWXhPLzFocy9Fek0KNzhzWWdWZ1VZQU5lUFNEajBNM0tpQlIvazF5d0k5UU13c2JMMHhIQkFMak85YUk4UUJQdWpta2R3cEFPZ0g2UAp5dFlrLzNMSGNWNG1ZZ [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRREtaOStjYVM2S0NOa2QKTFpDSnV2NE02cXowTkNsc0JZeE8vMWhzL0V6TTc4c1lnVmdVWUFOZVBTRGowTTNLaUJSL2sxeXdJOVFNd3NiTAoweEhCQUxqTzlhSThRQlB1am1rZHdwQU9nSDZQeXRZay8zTEhjVjRtWWZnL3hiTnAxa2x6dU1vMXJVYmtGMVo2CnQxYzFkbmRYY3M0QjNieldCbkhncTBQKzFLUFdHdVhNTG5WRnZqbTkxdDd5WVRzMFNHM0E5TUl2U3EwMCtFaFUKbnJVWjFyUE5OVWdjcTBKemw1VjlkQjFHcXA2b2lHeDI4aVNZanZaNTZUZERHdExCN1ZwZFU2b011TFFpcGY3bwpzd2tJd1JTK3hJcWp1Q [...]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: "2026-06-26T23:42:41Z"
  generation: 1
  name: app
  namespace: default
  resourceVersion: "2884"
  uid: c51b80c4-dc4d-425f-ad77-239ca333c147
spec:
  hostnames:
  - gateway.example.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: eg
    namespace: default
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: app-svc
      namespace: default
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents:
  - conditions:
    - lastTransitionTime: "2026-06-26T23:42:41Z"
      message: Route is accepted
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-06-26T23:42:41Z"
      message: Resolved all the Object references for the Route
      observedGeneration: 1
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    controllerName: gateway.envoyproxy.io/gatewayclass-controller
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: default
      sectionName: https
